--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,28 @@
 <resources>
     <string name="app_name">BWARG (Slave)</string>
     <string name="settings">Settings</string>
+    <string name="key_device_name">device_name</string>
+    <string name="action_settings">Settings</string>
+    <string name="resolution_label">Resolution</string>
+    <string name="camera_label">Camera</string>
+    <string name="flash_light_label">Flash</string>
+    <string name="use_flash_label">Use flash</string>
+    <string name="server_port_label">Server Port</string>
+    <string name="server_name_label">Server Name</string>
+    <string name="quality_label">Quality</string>
+    <string name="image_label">Image</string>
+    <string name="digits_decrement">-</string>
+    <string name="digits_increment">-</string>
+    <string name="resolution_times">x</string>
+    <string name="address_dot">.</string>
+    <string name="port_8080_with_explanation">8080 (for IP Webcam)</string>
+    <string name="settings_done">Done</string>
+    <string name="compression_method_label">Compression Method (soon)</string>
+    <string name="jpeg_label">JPEG (bigger files, faster enc/dec)</string>
+    <string name="bgp_label">BGP (smaller files, slower enc/dec)</string>
+    <string name="camera_0_back">Back (Camera 0)</string>
+    <string name="camera_1_front">Front (Camera 1)</string>
+
+
 </resources>
 
