Added option to lock physical keys
Useful for my S3 with broken screen, so I don't click on the two touch
buttons by mistake. Home buttons seems not to be disabled, but it's less
easy to click on it by mistake!
Credits to https://github.com/shaobin0604/Android-HomeKey-Locker/

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,7 +37,7 @@
     <string name="bgp_label">BGP (smaller files, slower enc/dec)</string>
     <string name="camera_0_back">Back (Camera 0)</string>
     <string name="camera_1_front">Front (Camera 1)</string>
-
-
+    <string name="interface_label">Interface</string>
+    <string name="lock_keys_checkbox">Lock physical buttons (experimental)</string>
 </resources>
 
