--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="key_device_name">device_name</string>
     <string name="action_settings">Settings</string>
     <string name="resolution_label">Resolution</string>
+    <string name="resolution_spinner_label">Resolution : </string>
     <string name="camera_label">Camera</string>
     <string name="flash_light_label">Flash</string>
     <string name="use_flash_label">Use flash</string>
@@ -39,5 +40,17 @@
     <string name="camera_1_front">Front (Camera 1)</string>
     <string name="interface_label">Interface</string>
     <string name="lock_keys_checkbox">Lock physical buttons (experimental)</string>
+    <string name="image">Image</string>
+    <string name="open_image_settings">Open image settings</string>
+    <string name="capture_label">Capture</string>
+    <string name="white_balance">White balance</string>
+    <string name="auto_white_balance_lock">Auto white balance lock</string>
+    <string name="exposure_label">Exposure</string>
+    <string name="focus_mode_label">Focus mode</string>
+    <string name="iso_label">ISO</string>
+    <string name="extras_label">Extras</string>
+    <string name="image_stabilization_checkBox">Stabilize image</string>
+    <string name="auto_exposure_lock">Auto exposure lock</string>
+    <string name="mode_label">Mode : </string>
 </resources>
 
